--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
     maven { name 'Sonatype';    url 'https://oss.sonatype.org/content/groups/public' }
     maven { name 'NyaaCat';     url 'https://ci.nyaacat.com/maven/' }
     maven { name 'NyaaCentral'; url 'https://raw.githubusercontent.com/NyaaCat/NyaaCentral/maven-repo'}
+    maven { name 'aikar';     url 'https://repo.aikar.co/content/groups/aikar/' }
 }
 
 tasks.withType(JavaCompile) {
@@ -23,6 +24,6 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile('cat.nyaa:nyaacore:7.0-SNAPSHOT')
+    compile('cat.nyaa:nyaacore:7.1-SNAPSHOT')
     compileOnly "org.spigotmc:spigot-api:${minecraftVersion}-R0.1-SNAPSHOT"
 }
